--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typechain": "^8.1.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "web3": "^1.8.1"
   }
 }
