--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/artifacts
-/cache
 /node_modules
 /yarn.lock
 /.env
 /smart\ contracts/cache
+/smart\ contracts/artifacts/contracts
+/smart\ contracts/artifacts/build-info
