--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typechain": "^8.1.1"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3",
     "web3": "^1.8.1"
