--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 
+/yarn.lock
+
 # testing
 /coverage
 
@@ -33,4 +35,3 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
