--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4",
     "wagmi": "^0.9.3"
